# infinite_gains

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_ai_decisions.py  0003_add_openclaw_proposals.py  0004_add_exit_fields_to_trades.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: Dashboard.tsx  index.css
infra/postgres/: init.sql
monitoring/grafana/dashboards/: trading_bot.json
monitoring/prometheus/: prometheus.yml
scripts/: backfill_signals.py  check_wallet.py  generate_l2_keys.py
src/: __init__.py
src/config/: settings.py
src/core/: __init__.py  clock.py  enums.py  exceptions.py  logging.py  types.py
src/db/: engine.py  models.py  repository.py
src/services/: __init__.py
src/services/ai/: __init__.py  context_builder.py  decision_engine.py  minimax_client.py  prompt_builder.py  response_parser.py
src/services/execution/: __init__.py  clob_client.py  exit_engine.py  order_manager.py  paper_trader.py  position_monitor.py  ws_fill_tracker.py
src/services/indicators/: __init__.py  rsi.py  signal_engine.py  stochastic.py  taapi_client.py
src/services/learning/: __init__.py  __main__.py  ai_prompt_advisor.py  approval_workflow.py  param_advisor.py  performance_analyzer.py
tests/: conftest.py
tests/integration/: test_db_repository.py  test_paper_trader.py
tests/unit/: test_kill_switch.py  test_market_finder.py  test_risk_engine.py  test_signal_engine.py
(+24 files in other folders)
