[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "infinite-gains"
version = "0.1.0"
description = "Polymarket BTC 1H trading bot"
requires-python = ">=3.12"
dependencies = [
  "py-clob-client>=0.34.6",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "httpx[http2]>=0.27.0",
  "websockets>=12.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-telegram-bot[job-queue]>=22.0",
  "apscheduler>=3.10.0",
  "prometheus-client>=0.20.0",
  "structlog>=24.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
mypy_path = "src"
